# merfin-lang

./: CMakeLists.txt  readme.md  test
docs/: example.cpp  lexer.hlex
examples/: array.mer  class.mer  range-sum.mer
includes/: ast.h  class.h  control-flow.h  env.h  error.h  expr.h  function.h  lexer.h  stmts.h  symbol.h  types.h  var_decl.h
includes/tools/: guard.h
src/: class.cpp  control-flow.cpp  expr.cpp  function.cpp  main.cpp  stmts.cpp  symbol.cpp  type.cpp  var_decl.cpp
tools/: gen_lexer.sh  gen_parser.sh  hlex  hparser
tools/template/: hlex.txt  hparser.txt
